rtest/tests/jsr335/Semantics/InterfaceMethods/MethodDeclarations/ShouldFail/syntax14/Test.java
// .result=COMPILE_FAIL


public class Test {
	interface A {
		default synchronized void m() { 
			
		} 
	}
}